unpackaged/main/default/objects/Account/fields/Account_Frozen_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Frozen_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Frozen/Past Client Date</label>
    <type>DateTime</type>
</CustomField>