unpackaged/main/default/objects/Account/fields/Account_Status_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Modified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Status Modified Date</label>
    <type>DateTime</type>
</CustomField>