unpackaged/main/default/objects/Account/fields/Account_Unfrozen_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Unfrozen_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Unfrozen Date</label>
    <type>DateTime</type>
</CustomField>