unpackaged/main/default/objects/Account/fields/Affiliation_3__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Affiliated Accounts (Affiliation 1)</inlineHelpText>
    <label>Affiliation 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Accounts (Affiliation 3)</relationshipLabel>
    <relationshipName>Accounts_Affiliation_3</relationshipName>
    <type>Lookup</type>
</CustomField>