unpackaged/main/default/objects/Account/fields/Affiliation_notes__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affiliation(notes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>