unpackaged/main/default/objects/Account/fields/ALWAYS_Call_from_Cell__c.field-meta.xml
<CustomField>
    <fullName>ALWAYS_Call_from_Cell__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Some Vendors avoid calls from Concierge services.  Calling from a Cell, or unlisted number, will improve chances of answer.</inlineHelpText>
    <label>ALWAYS Call from Cell</label>
    <type>Checkbox</type>
</CustomField>