unpackaged/main/default/objects/Account/fields/Available_Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit_Hours__c</fullName>
    <label>Available Credit Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>