unpackaged/main/default/objects/Account/fields/Available_Online_Before_Phone__c.field-meta.xml
<CustomField>
    <fullName>Available_Online_Before_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available Online Before Phone?</label>
    <type>Checkbox</type>
</CustomField>