unpackaged/main/default/objects/Account/fields/Best_Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Method_of_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Best Method of Contact</label>
    <type>TextArea</type>
</CustomField>