unpackaged/main/default/objects/Account/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Please use this section for any specific membership and billing info that you need to add.</inlineHelpText>
    <label>Membership and Billing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>