unpackaged/main/default/objects/Account/fields/Came_From__c.field-meta.xml
<CustomField>
    <fullName>Came_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Came From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>