unpackaged/main/default/objects/Account/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Policy</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>