unpackaged/main/default/objects/Account/fields/Client_Level__c.field-meta.xml
<CustomField>
    <fullName>Client_Level__c</fullName>
    <description>Client level for relationship tracking.</description>
    <inlineHelpText>Client level for relationship tracking.</inlineHelpText>
    <label>Client Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>