unpackaged/main/default/objects/Account/fields/Commission_Details__c.field-meta.xml
<CustomField>
    <fullName>Commission_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>