unpackaged/main/default/objects/Account/fields/Commission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Due Date</label>
    <type>TextArea</type>
</CustomField>