unpackaged/main/default/objects/Account/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Mark Up</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Coastline</fullName>
            </value>
            <value>
                <fullName>Not Commissionable</fullName>
            </value>
            <value>
                <fullName>Air Travel</fullName>
            </value>
            <value>
                <fullName>Car Service</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Non Travel</fullName>
            </value>
            <value>
                <fullName>On Site/DMC</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>