unpackaged/main/default/objects/Account/fields/Commission_Val__c.field-meta.xml
<CustomField>
    <fullName>Commission_Val__c</fullName>
    <label>Expected Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>