unpackaged/main/default/objects/Account/fields/Commissionable_CB__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissionable</label>
    <type>Checkbox</type>
</CustomField>