unpackaged/main/default/objects/Account/fields/Contact_1_at_Insider__c.field-meta.xml
<CustomField>
    <fullName>Contact_1_at_Insider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 1 at Insider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact1Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>