unpackaged/main/default/objects/Account/fields/Contact_2_at_Insider__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_at_Insider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 2 at Insider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact2Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>