unpackaged/main/default/objects/Account/fields/Contact_3_at_Insider__c.field-meta.xml
<CustomField>
    <fullName>Contact_3_at_Insider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 3 at Insider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact3Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>