unpackaged/main/default/objects/Account/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Contact Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>