unpackaged/main/default/objects/Account/fields/Create_Standard_Folders__c.field-meta.xml
<CustomField>
    <fullName>Create_Standard_Folders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Standard Folders</label>
    <type>Checkbox</type>
</CustomField>