unpackaged/main/default/objects/Account/fields/Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Cross_Streets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cross Streets</label>
    <type>TextArea</type>
</CustomField>