unpackaged/main/default/objects/Account/fields/Cuisine__c.field-meta.xml
<CustomField>
    <fullName>Cuisine__c</fullName>
    <label>Cuisine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Asian Fusion</fullName>
            </value>
            <value>
                <fullName>Bagels</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Burgers</fullName>
            </value>
            <value>
                <fullName>Cafe/Coffee Shop</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Cocktail Bar/Drinks</fullName>
            </value>
            <value>
                <fullName>Cuban</fullName>
            </value>
            <value>
                <fullName>Deli</fullName>
            </value>
            <value>
                <fullName>Dim Sum</fullName>
            </value>
            <value>
                <fullName>Ethiopian</fullName>
            </value>
            <value>
                <fullName>Farm to Table</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Gastronomic</fullName>
            </value>
            <value>
                <fullName>Gastropub</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Latin American</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Omakase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>