unpackaged/main/default/objects/Account/fields/Date_Of_Closure__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Closure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Closure</label>
    <type>Date</type>
</CustomField>