unpackaged/main/default/objects/Account/fields/Date_of_Opening__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Opening__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date this vendor opened up their business.</inlineHelpText>
    <label>Date of Opening</label>
    <type>Date</type>
</CustomField>