unpackaged/main/default/objects/Account/fields/Date_Retainer_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Retainer_Changed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Retainer Changed</label>
    <type>Date</type>
</CustomField>