unpackaged/main/default/objects/Account/fields/Days_Passed_Since_Doing_Business_With__c.field-meta.xml
<CustomField>
    <fullName>Days_Passed_Since_Doing_Business_With__c</fullName>
    <formula>Started_Doing_Business_With__c  - Today ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Passed Since Doing Business With</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>