unpackaged/main/default/objects/Account/fields/Days_Passed_Since_Opening__c.field-meta.xml
<CustomField>
    <fullName>Days_Passed_Since_Opening__c</fullName>
    <formula>Date_of_Opening__c  - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Passed Since Opening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>