unpackaged/main/default/objects/Account/fields/Discount_Applies__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Applies</label>
    <type>Checkbox</type>
</CustomField>