unpackaged/main/default/objects/Account/fields/Discount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discount_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discount Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>