unpackaged/main/default/objects/Account/fields/Does_Housecalls__c.field-meta.xml
<CustomField>
    <fullName>Does_Housecalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Housecalls</label>
    <type>Checkbox</type>
</CustomField>