unpackaged/main/default/objects/Account/fields/Does_Not_Take_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Take_Reservations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Not Take Reservations</label>
    <type>Checkbox</type>
</CustomField>