unpackaged/main/default/objects/Account/fields/Does_Not_Work_With_Concierges__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Work_With_Concierges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Not Work With Concierges</label>
    <type>Checkbox</type>
</CustomField>