unpackaged/main/default/objects/Account/fields/Dog_House__c.field-meta.xml
<CustomField>
    <fullName>Dog_House__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dog House</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>