unpackaged/main/default/objects/Account/fields/Don_t_offer_commission__c.field-meta.xml
<CustomField>
    <fullName>Don_t_offer_commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don’t offer commission</label>
    <type>Checkbox</type>
</CustomField>