unpackaged/main/default/objects/Account/fields/Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop Date</label>
    <type>Date</type>
</CustomField>