unpackaged/main/default/objects/Account/fields/Early_Slip_Ins_Possible__c.field-meta.xml
<CustomField>
    <fullName>Early_Slip_Ins_Possible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Slip Ins Possible?</label>
    <type>Checkbox</type>
</CustomField>