unpackaged/main/default/objects/Account/fields/Email_General_Business__c.field-meta.xml
<CustomField>
    <fullName>Email_General_Business__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>General Business email that might not be used for reservations and bookings.</inlineHelpText>
    <label>Email - General Business</label>
    <type>Email</type>
</CustomField>