unpackaged/main/default/objects/Account/fields/Free_Hours_or_Credits__c.field-meta.xml
<CustomField>
    <fullName>Free_Hours_or_Credits__c</fullName>
    <label>Free Hours or Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>