unpackaged/main/default/objects/Account/fields/General_Business_Email_1__c.field-meta.xml
<CustomField>
    <fullName>General_Business_Email_1__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Check contacts first before you use this email</inlineHelpText>
    <label>General Business Email #1</label>
    <type>Email</type>
</CustomField>