unpackaged/main/default/objects/Account/fields/General_Business_Email_2__c.field-meta.xml
<CustomField>
    <fullName>General_Business_Email_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>General Business Email #2</label>
    <type>Email</type>
</CustomField>