unpackaged/main/default/objects/Account/fields/Grease_Facetime_Trial_Total__c.field-meta.xml
<CustomField>
    <fullName>Grease_Facetime_Trial_Total__c</fullName>
    <label>Grease/Facetime/Trial Total</label>
    <summarizedField>Grease__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Grease__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>