unpackaged/main/default/objects/Account/fields/Guest_Information_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Guest_Information_Special_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Include other details such as Dress Code, Menu Details, etc.</inlineHelpText>
    <label>Guest Information / Special Instructions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>