unpackaged/main/default/objects/Account/fields/Holding_Off__c.field-meta.xml
<CustomField>
    <fullName>Holding_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holding Off</label>
    <type>Checkbox</type>
</CustomField>