unpackaged/main/default/objects/Account/fields/Holiday_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Reminders__c</fullName>
    <label>Holiday Reminders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valentine's Day</fullName>
            </value>
            <value>
                <fullName>Mother's Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>