unpackaged/main/default/objects/Account/fields/Hours_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_Month__c</fullName>
    <label>Hours per Month</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>