unpackaged/main/default/objects/Account/fields/Hours_Remaining_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining_This_Month__c</fullName>
    <formula>Hours_per_Month__c -  Billable_Time_Logged_MTD_hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Remaining This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>