unpackaged/main/default/objects/Account/fields/Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>Hours_Status__c</fullName>
    <formula>IF( ( Time_Logged_MTD_hours__c) &gt; Hours_per_Month__c, 
IMAGE("/servlet/servlet.FileDownload?file=0150b000001v3S3","Red Flag",32,32) , 
IMAGE("/servlet/servlet.FileDownload?file=0150b000001v3S8","Green Flag",32,32) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Status</label>
    <type>Text</type>
</CustomField>