unpackaged/main/default/objects/Account/fields/Hours_Usage_Warnings_Sent_to__c.field-meta.xml
<CustomField>
    <fullName>Hours_Usage_Warnings_Sent_to__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hours Usage Warnings Sent to</label>
    <length>200</length>
    <type>Text</type>
</CustomField>