unpackaged/main/default/objects/Account/fields/How_Far_In_Advance_To_Take_Reservations__c.field-meta.xml
<CustomField>
    <fullName>How_Far_In_Advance_To_Take_Reservations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How Far In Advance To Take Reservations</label>
    <type>TextArea</type>
</CustomField>