unpackaged/main/default/objects/Account/fields/In_Case_of_Emergency_Overhours_Notes__c.field-meta.xml
<CustomField>
    <fullName>In_Case_of_Emergency_Overhours_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In Case of Emergency Overhours Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>