unpackaged/main/default/objects/Account/fields/Insider_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Insider_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insider Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>