unpackaged/main/default/objects/Account/fields/Insider_Team__c.field-meta.xml
<CustomField>
    <fullName>Insider_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insider Team</label>
    <referenceTo>Insider_Team__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>