unpackaged/main/default/objects/Account/fields/Largest_Party_Main_Dining_Room__c.field-meta.xml
<CustomField>
    <fullName>Largest_Party_Main_Dining_Room__c</fullName>
    <inlineHelpText>This is the max amount of people that can be seated in the main dining room before needing to switch to a private dining room.</inlineHelpText>
    <label>Largest Party - Main Dining Room</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>