unpackaged/main/default/objects/Account/fields/Last_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Month__c</fullName>
    <formula>if(
MONTH(TODAY()) = 12, DATETIMEVALUE(TEXT(YEAR(TODAY())+1) &amp; "-" &amp; TEXT(MONTH(TODAY())+1) &amp; "-01 02:50:00"),
DATETIMEVALUE(TEXT(YEAR(TODAY())) &amp; "-" &amp; TEXT(MONTH(TODAY())+1) &amp; "-01 01:58:00")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of Month</label>
    <type>DateTime</type>
</CustomField>