unpackaged/main/default/objects/Account/fields/Membership_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Membership_Renewal__c</fullName>
    <label>Membership Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>