unpackaged/main/default/objects/Account/fields/Mid_Week_Hours_Update__c.field-meta.xml
<CustomField>
    <fullName>Mid_Week_Hours_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Hours Weekly</label>
    <type>Checkbox</type>
</CustomField>