unpackaged/main/default/objects/Account/fields/Minimum_Age_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Minimum Age Requirements</label>
    <type>TextArea</type>
</CustomField>