unpackaged/main/default/objects/Account/fields/Monday_Friday_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Monday_Friday_Open_Time__c</fullName>
    <label>Monday-Friday Open Time</label>
    <type>Time</type>
</CustomField>