unpackaged/main/default/objects/Account/fields/Monthly_Invoices_Required__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Invoices_Required__c</fullName>
    <label>Monthly Invoices Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Upon request</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>