unpackaged/main/default/objects/Account/fields/Monthly_Report_Needed__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Report Needed</label>
    <type>Checkbox</type>
</CustomField>