unpackaged/main/default/objects/Account/fields/Monthly_Retainer__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Retainer__c</fullName>
    <label>Monthly Retainer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>