unpackaged/main/default/objects/Account/fields/Neighbourhood__c.field-meta.xml
<CustomField>
    <fullName>Neighbourhood__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Neighborhood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>