unpackaged/main/default/objects/Account/fields/New_Client_Referral__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Referral__c</fullName>
    <label>New Client Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>