unpackaged/main/default/objects/Account/fields/Next_Billing_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Billing Scheduled</label>
    <type>Checkbox</type>
</CustomField>