unpackaged/main/default/objects/Account/fields/Non_Billable_Account__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Billable Account</label>
    <type>Checkbox</type>
</CustomField>