unpackaged/main/default/objects/Account/fields/Notable_Dates_Closed__c.field-meta.xml
<CustomField>
    <fullName>Notable_Dates_Closed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notable Dates Closed</label>
    <type>TextArea</type>
</CustomField>