unpackaged/main/default/objects/Account/fields/Notes_Section__c.field-meta.xml
<CustomField>
    <fullName>Notes_Section__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes Section</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>