unpackaged/main/default/objects/Account/fields/Online_Booking_Password__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking_Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Booking Username/Password</label>
    <type>TextArea</type>
</CustomField>